--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3f999e86c7cab271d65c8fa5dc522a318989186155a2c89ad8705252b3bae6b9"
+  "signature": "sha256:047f17b12835a9e2edeb637196b5a350b5903ccfaba8e953204118a1df920f59"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -72,12 +72,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "N= 512\n",
+        "N= 128\n",
         "Accuracy: 1e-07\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -107,13 +107,13 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%timeit tuck.cross.conv(newton, slater, eps, [4,4,4])"
+      "%timeit tuck.cross.conv(newton, slater, eps, [4,4,4], y0 = newton)"
      ],
      "language": "python",
      "metadata": {},
@@ -122,17 +122,42 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10 loops, best of 3: 146 ms per loop\n"
+        "10 loops, best of 3: 107 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "slater"
+      "a = np.random.random((9, 11, 14))\n",
+      "b = np.random.random((12, 11, 13))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#c = a.dot(b)\n",
+      "ct = np.tensordot(a, b, (1, 1))\n",
+      "#np.linalg.norm(c - ct)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ct.shape"
      ],
      "language": "python",
      "metadata": {},
@@ -140,16 +165,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 38,
        "text": [
-        "This is a 3D tensor in the Tucker format with \n",
-        "r(0)=16, n(0)=512 \n",
-        "r(1)=16, n(1)=512 \n",
-        "r(2)=16, n(2)=512 "
+        "(9, 14, 12, 13)"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
