--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e84169bd00479b656c102c429a6cd1c5f9820180dd8d604afa576fc67e3b9521"
+  "signature": "sha256:52949742ec2455d9335bee38304cd08a9339e2876089781f18273fbe26cc485c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,8 +19,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "Vendor:  Continuum Analytics, Inc.\n",
+        "Package: mkl\n",
+        "Message: trial mode expires in 30 days\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -28,7 +38,7 @@
      "input": [
       "np.random.seed(1)\n",
       "\n",
-      "N = 2**9\n",
+      "N = 2**11\n",
       "M = 2*N-1\n",
       "print 'N= %s' % N\n",
       "\n",
@@ -62,12 +72,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "N= 512\n",
+        "N= 2048\n",
         "Accuracy: 1e-07\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -78,8 +88,8 @@
       "print 'It does not influence cross-conv time performance.'\n",
       "print 'Will be updated soon.'\n",
       "print 'In process...'\n",
-      "slater = tuck.cross.cross3d(slater_func, N, eps, delta_add = 1e-5)\n",
-      "newton = tuck.cross.cross3d(newton_func, N, eps, delta_add = 1e-5)\n",
+      "slater = tuck.cross.cross3d(slater_func, N, eps, delta_add = 1e-7)\n",
+      "newton = tuck.cross.cross3d(newton_func, N, eps, delta_add = 1e-7)\n",
       "newton = tuck.cross.toepl2circ(newton)"
      ],
      "language": "python",
@@ -97,13 +107,13 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%timeit tuck.cross.conv(newton, slater, eps, [4,4,4], y0 = newton)"
+      "%timeit a = tuck.cross.multifun_dot([slater], eps, fun = lambda a: a[0]**3 + a[0], pr = None, r_add = 4, y0 = slater)"
      ],
      "language": "python",
      "metadata": {},
@@ -112,23 +122,46 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1 loops, best of 3: 207 ms per loop\n"
+        "10 loops, best of 3: 67.2 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a = np.random.random((9, 11, 14))\n",
-      "b = np.random.random((12, 11, 13))"
+      "%timeit b = tuck.cross.multifun([slater], eps, fun = lambda a: a[0]**3 + a[0], pr=None, r_add = 4, y0 = slater)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 36
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "10 loops, best of 3: 66.3 ms per loop\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -140,14 +173,26 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 37
+     "outputs": [
+      {
+       "ename": "IndexError",
+       "evalue": "tuple index out of range",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-44-fae0d4c56536>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#c = a.dot(b)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensordot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#np.linalg.norm(c - ct)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Applications/anaconda/lib/python2.7/site-packages/numpy/core/numeric.pyc\u001b[0m in \u001b[0;36mtensordot\u001b[0;34m(a, b, axes)\u001b[0m\n\u001b[1;32m   1244\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1245\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mna\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1246\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mas_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxes_a\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mbs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxes_b\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1247\u001b[0m                 \u001b[0mequal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1248\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+       ]
+      }
+     ],
+     "prompt_number": 44
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ct.shape"
+      "tuck.norm(a-b)/tuck.norm(b)"
      ],
      "language": "python",
      "metadata": {},
@@ -155,13 +200,73 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 38,
+       "prompt_number": 47,
        "text": [
-        "(9, 14, 12, 13)"
+        "(2.9620996325751011e-08+0j)"
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 47
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "g = np.random.random((20, 20, 20))\n",
+      "u = np.random.random(( 1, 20))\n",
+      "%timeit g.dot(u.T)\n",
+      "%timeit np.tensordot(g, u.T, (2, 0))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "100000 loops, best of 3: 6.16 \u00b5s per loop\n",
+        "100000 loops, best of 3: 18.5 \u00b5s per loop"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%load_ext line_profiler"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%lprun -f tuck.cross.multifun tuck.cross.multifun([slater], eps, fun = lambda a: a[0]**3 + a[0], pr=None, r_add = 4, y0 = slater)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
