--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,11 +1,7 @@
 {
  "metadata": {
   "name": "",
-<<<<<<< HEAD
-  "signature": "sha256:c51a6cd05b54c74b3329cb62688ca27fa05ab8b29c67488a23a17cf3b2240c85"
-=======
-  "signature": "sha256:52949742ec2455d9335bee38304cd08a9339e2876089781f18273fbe26cc485c"
->>>>>>> dot2tensordot
+  "signature": "sha256:3feb7f002f6a90169b22a54bb7fba25c4c7005e39006362ca362c7a6cc02b28a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,7 +26,7 @@
        "text": [
         "Vendor:  Continuum Analytics, Inc.\n",
         "Package: mkl\n",
-        "Message: trial mode expires in 30 days\n"
+        "Message: trial mode expires in 29 days\n"
        ]
       }
      ],
@@ -42,11 +38,7 @@
      "input": [
       "np.random.seed(1)\n",
       "\n",
-<<<<<<< HEAD
-      "N = 2**12\n",
-=======
       "N = 2**11\n",
->>>>>>> dot2tensordot
       "M = 2*N-1\n",
       "print 'N= %s' % N\n",
       "\n",
@@ -80,11 +72,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-<<<<<<< HEAD
-        "N= 4096\n",
-=======
         "N= 2048\n",
->>>>>>> dot2tensordot
         "Accuracy: 1e-07\n"
        ]
       }
@@ -100,13 +88,8 @@
       "print 'It does not influence cross-conv time performance.'\n",
       "print 'Will be updated soon.'\n",
       "print 'In process...'\n",
-<<<<<<< HEAD
-      "slater = tuck.cross.cross3d(slater_func, N, eps, delta_add = 1e-5)\n",
-      "newton = tuck.cross.cross3d(newton_func, N, eps, delta_add = 1e-5)\n",
-=======
       "slater = tuck.cross.cross3d(slater_func, N, eps, delta_add = 1e-7)\n",
       "newton = tuck.cross.cross3d(newton_func, N, eps, delta_add = 1e-7)\n",
->>>>>>> dot2tensordot
       "newton = tuck.cross.toepl2circ(newton)"
      ],
      "language": "python",
@@ -130,12 +113,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-<<<<<<< HEAD
-      "#%load_ext line_profiler\n",
-      "%prun tuck.cross.multifun([slater], eps, fun = lambda a: a[0]**3 + a[0])"
-=======
       "%timeit a = tuck.cross.multifun_dot([slater], eps, fun = lambda a: a[0]**3 + a[0], pr = None, r_add = 4, y0 = slater)"
->>>>>>> dot2tensordot
      ],
      "language": "python",
      "metadata": {},
@@ -144,33 +122,16 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-<<<<<<< HEAD
-        " "
+        "10 loops, best of 3: 64.7 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 7
-=======
-        "10 loops, best of 3: 67.2 ms per loop\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
->>>>>>> dot2tensordot
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-<<<<<<< HEAD
-      "a = np.random.random((9, 11, 14))\n",
-      "b = np.random.random((12, 11, 13))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 36
-=======
       "%timeit b = tuck.cross.multifun([slater], eps, fun = lambda a: a[0]**3 + a[0], pr=None, r_add = 4, y0 = slater)"
      ],
      "language": "python",
@@ -180,11 +141,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10 loops, best of 3: 66.3 ms per loop\n"
+        "10 loops, best of 3: 64.6 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -201,7 +162,6 @@
      "language": "python",
      "metadata": {},
      "outputs": []
->>>>>>> dot2tensordot
     },
     {
      "cell_type": "code",
@@ -213,10 +173,6 @@
      ],
      "language": "python",
      "metadata": {},
-<<<<<<< HEAD
-     "outputs": [],
-     "prompt_number": 37
-=======
      "outputs": [
       {
        "ename": "IndexError",
@@ -231,17 +187,12 @@
       }
      ],
      "prompt_number": 44
->>>>>>> dot2tensordot
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-<<<<<<< HEAD
-      "ct.shape"
-=======
       "tuck.norm(a-b)/tuck.norm(b)"
->>>>>>> dot2tensordot
      ],
      "language": "python",
      "metadata": {},
@@ -249,15 +200,6 @@
       {
        "metadata": {},
        "output_type": "pyout",
-<<<<<<< HEAD
-       "prompt_number": 38,
-       "text": [
-        "(9, 14, 12, 13)"
-       ]
-      }
-     ],
-     "prompt_number": 38
-=======
        "prompt_number": 47,
        "text": [
         "(2.9620996325751011e-08+0j)"
@@ -321,11 +263,156 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [
+      "dot(a,a,a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'dot' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-16-acdc33596ae1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mNameError\u001b[0m: name 'dot' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from __future__ import division\n",
+      "import numpy as np\n",
+      "cimport numpy as np"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-19-1aed5946cc02>, line 3)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-1aed5946cc02>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    cimport numpy as np\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numba\n",
+      "from numba import autojit\n",
+      "@autojit\n",
+      "def fun():\n",
+      "    summ = 0.\n",
+      "    for i in xrange(50*50*50*1000):\n",
+      "        summ += 1.\n",
+      "    return summ\n",
+      "summ = fun()\n",
+      "print summ"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "125000000.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print summ"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "125000000.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
->>>>>>> dot2tensordot
+     "outputs": [],
+     "prompt_number": 65
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "n = 1000\n",
+      "x = np.linspace(0.1, 1, n)\n",
+      "xx, yy = np.meshgrid(x, x)\n",
+      "a = 1./(xx + yy)\n",
+      "\n",
+      "u, v = tuck.cross.cross2d_full(a, 1e-8)\n",
+      "print 'DONE'\n",
+      "print np.linalg.norm(a - u.dot(v.T))/np.linalg.norm(a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "DONE\n",
+        "7.81849822165e-10"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "u.shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 53,
+       "text": [
+        "(8000, 8)"
+       ]
+      }
+     ],
+     "prompt_number": 53
     },
     {
      "cell_type": "code",
